<resources>
    <string name="app_name">Lovenders</string>
    <string name="by_clicking_start_you_agree_to_our_terms_and_conditions">By Logging in, you agree to our\n terms and conditions</string>
    <string name="enter_phone_number">Enter Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="verification_code">Verification Code</string>
    <string name="please_type_verification_code_sent_to">Please type verification code sent to</string>
    <string name="verify">VERIFY</string>
    <string name="facebook_app_id">734486243579898</string>
    <string name="fb_login_protocol_scheme">fb734486243579898</string>
    <string name="whoops">Whoops !</string>
    <string name="slow_or_no_internet_connection_ncheck_your_internhet_setting_and_try_again">Slow or no internet connection\ncheck your internet setting and try again.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="about">About</string>
    <string name="job_title">Job Title</string>
    <string name="what_you_do">What you do ?</string>
    <string name="company">Company</string>
    <string name="your_company_name">Your company name ?</string>
    <string name="school_university">School/University</string>
    <string name="your_school_university_name">My school/university name ?</string>
    <string name="settings">Settings</string>
    <string name="get_super_likes">Get Super Likes</string>
    <string name="age_range">AGE RANGE</string>
    <string name="your_pics">My Photos</string>
    <string name="name">Name</string>
    <string name="my_name_is">My name is</string>
    <string name="all_about_me">Write something special about you and let others know your speciality</string>
    <string name="help_and_support">Help and Support</string>
    <string name="submit">SUBMIT</string>
    <string name="write_here">Write here…</string>
    <string name="enjoying_lavender">Enjoying Lovenders?</string>
    <string name="your_recommendations_and_suggestions_will_be_thoroughly_reviewed_to_improve_lavender">Your recommendations and suggestions will be thoroughly reviewed to improve Lavender</string>
    <string name="legal">Legal</string>
    <string name="man">MAN</string>
    <string name="i_am">I am</string>
    <string name="i_am_interested_in">I am Interested In</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="lesbians">Lesbians</string>
    <string name="gays">gays</string>
    <string name="likings">LIKINGS</string>
    <string name="woman">WOMAN</string>
    <string name="religion">Religion</string>
    <string name="zodiac">Zodiac</string>
    <string name="interests">Interests</string>
    <string name="intro">Intro</string>
    <string name="swipes">Swipes</string>
    <string name="all_caught_up">All Caught Up</string>
    <string name="ooops">Ooops!</string>
    <string name="no_internet_detected">No Internet Detected. Click on image to try again</string>
    <string name="my_age">My Age</string>
    <string name="my_height">My Height</string>
    <string name="api_name">http://lovenders.com/api/</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="general_details">General Details</string>
    <string name="km">Km.</string>
    <string name="you">You</string>
    <string name="happy_birthday">Happy BirthDay</string>
    <string name="matches">Matches</string>
    <string name="messages">Messages</string>
    <string name="type_a_message">Type a message</string>
    <string name="no_matches_right_now">No Matches Right Now!</string>
    <string name="no_recent_likes_available">No Recent Likes Available!</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="visible">Visible</string>
    <string name="body_type">Body Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="update">UPDATE</string>
    <string name="click_on_map_to_get_location">click on map to get location</string>
    <string name="send_location">SEND LOCATION</string>
    <string name="lovenders">Lovenders</string>
    <string name="match_found">Match Found</string>
    <string name="reset_if_entered_wrong_number">reset if entered wrong number ?</string>
    <string name="my_recent_likes">My Recent Likes</string>
    <string name="report_spam">Report/Spam</string>
    <string name="report_a_spam">Report a spam</string>
    <string name="connect_instagram">Connect Instagram</string>
    <string name="logged_in_with">Logged in with</string>
    <string name="you_can_hide_your_profile_from_other_users_however_your_profile_will_be_hidden_but_your_matches_can_still_see_you">You can hide your profile from other users. However your profile will be hidden but your matches can still see you.</string>
    <string name="your_feed_will_consist_of_user_profiles_within_the_specified_age_range">Your feed will consist of user profiles within the specified age range.</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="report_profile">report profile</string>
    <string name="photos">Photos</string>
    <string name="become_a_pro">BECOME A PRO</string>
    <string name="unlimited_likes">swipe left for unlimited likes</string>
    <string name="unlimited_rewinds">want to see previous swiped profile? pro user can rewind any number of profiles</string>
    <string name="unlimited_super_likes">swipe right and send limitless super likes to be instantly notified by match</string>
    <string name="unlimited_instant_messaging">enjoy instant messaging with your matches</string>
    <string name="become_a_pro_user">BECOME A PRO USER</string>
    <string name="enable_location">ENABLE LOCATION</string>
    <string name="username">USERNAME</string>
    <string name="my_body_type">My Body Type</string>
    <string name="my_birthday">My Birthday</string>
    <string name="you_are_a_pro_user">You are a Pro User</string>
    <string name="build_version">105</string>
    <string name="delete_account">Delete Account</string>
</resources>
