<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:elevation="@dimen/elevation"
    android:id="@+id/hs_relative_layout"
    tools:context=".HelpAndSupport">

    <!--our toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/hs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--back button-->
            <ImageButton
                android:id="@+id/hs_back_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/black"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <!--edit profile-->
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_and_support"
                style="@style/TextStyle16"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!--feedback icon-->
    <ImageButton
        android:id="@+id/hs_feedback_icon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@drawable/ic_feedback"
        android:layout_below="@+id/hs_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/hs_header"
        android:layout_below="@+id/hs_feedback_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoying_lavender"
        android:layout_centerHorizontal="true"
        style="@style/TextStyle16"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/topBarColor"
        />
    <TextView
        android:id="@+id/hs_title"
        android:layout_below="@+id/hs_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_recommendations_and_suggestions_will_be_thoroughly_reviewed_to_improve_lavender"
        android:layout_centerHorizontal="true"
        style="@style/TextStyle14Login"
        android:textColor="@color/gray"
        android:gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />

    <!--spinner-->
    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/hs_spinner"
        android:layout_below="@+id/hs_title"
        style="@style/TextStyle14Login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:ms_hide_arrow="false"
        app:ms_background_color="@color/facebookBlue"
        app:ms_dropdown_max_height="350dp"
        app:ms_dropdown_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <EditText
        android:id="@+id/hs_edit_text"
        android:layout_width="match_parent"
        android:layout_below="@+id/hs_spinner"
        android:layout_height="250dp"
        android:hint="@string/write_here"
        android:textStyle="normal"
        style="@style/TextStyle14Login"
        android:gravity="start"
        android:padding="@dimen/text_view_padding"
        android:inputType="textMultiLine|textLongMessage"
        android:background="@drawable/help_and_support_edit_box_background"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:maxLength="300"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/hs_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        android:textStyle="bold"
        style="@style/TextStyle16"
        android:textColor="@color/white"
        android:background="@color/facebookBlue"
        />

    <!--spin kit-->
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/hs_spin_kit"
        style="@style/SpinKitView.Large.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/facebookBlue" />


</RelativeLayout>