<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VerifyOTP">

    <!--upper layout-->
    <RelativeLayout
        android:id="@+id/vo_rl1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/facebookBlue"
        >

        <!--back-->
        <ImageButton
            android:id="@+id/vo_back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_left_white_24dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/vo_image_iv"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_otp_logo"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/vo_rl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/vo_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            style="@style/TextStyle20"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            />
        <TextView
            android:id="@+id/vo_message_code"
            android:layout_below="@+id/vo_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_type_verification_code_sent_to"
            style="@style/TextStyle14Login"
            android:textColor="@color/black90"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            />

        <!--pin-->
        <com.chaos.view.PinView
            android:layout_below="@+id/vo_message_code"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/facebookBlue"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cursorColor="@color/white"
            app:cursorWidth="1dp"
            app:itemCount="5"
            app:itemHeight="36dp"
            app:itemRadius="4dp"
            app:itemSpacing="16dp"
            app:itemWidth="36dp"
            app:lineColor="@color/facebookBlue"
            app:lineWidth="1dp"
            app:viewType="rectangle"
            android:layout_marginTop="48dp"
            />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_alignParentBottom="true"
        android:background="@color/facebookBlue"
        />


</RelativeLayout>